--- a/Lib/Neon.Kube.Setup/Resources/Helm/kiali/crds/crds.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kiali/crds/crds.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: monitoringdashboards.monitoring.kiali.io
@@ -17,7 +17,7 @@ spec:
     storage: true
 ...
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: kialis.kiali.io
@@ -29,8 +29,6 @@ spec:
     plural: kialis
     singular: kiali
   scope: Namespaced
-  subresources:
-    status: {}
   versions:
   - name: v1alpha1
     served: true
