--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/values.yaml
@@ -16,7 +16,7 @@ operator:
   image:
     organization: neon-registry.node.local
     repository: minio-operator
-    tag: v4.4.8
+    tag: v4.4.17
     pullPolicy: IfNotPresent
   imagePullSecrets: []
   initcontainers: []
@@ -40,7 +40,7 @@ console:
   image:
     organization: neon-registry.node.local
     repository: minio-console
-    tag: v0.14.7
+    tag: v0.16.2
     pullPolicy: IfNotPresent
   imagePullSecrets: []
   initcontainers: []
@@ -69,7 +69,7 @@ tenants:
     image:
       organization: neon-registry.node.local
       repository: minio-minio
-      tag: RELEASE.2022-02-16T00-35-27Z
+      tag: RELEASE.2022-05-08T23-50-31Z
       pullPolicy: IfNotPresent
     ## Customize namespace for tenant deployment
     namespace: neon-system
@@ -170,13 +170,13 @@ tenants:
       - name: GOGC
         value: "25"
       - name: CONSOLE_PROMETHEUS_URL
-        value: http://cortex.neon-monitor:9009/api/prom
+        value: http://mimir.neon-monitor:9009/api/prom
       - name: CONSOLE_PROMETHEUS_AUTH_TYPE
         value: public
       - name: CONSOLE_PROMETHEUS_JOB_ID
         value: integrations/agent
       - name: MINIO_PROMETHEUS_URL
-        value: http://cortex.neon-monitor:9009/api/prom
+        value: http://mimir.neon-monitor:9009/api/prom
       - name: MINIO_PROMETHEUS_AUTH_TYPE
         value: public
       - name: MINIO_PROMETHEUS_JOB_ID
