fixed nodeselectors, removed openebs csidriver

--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/values.yaml
@@ -357,7 +357,8 @@ ingester:
                 app.kubernetes.io/component: ingester
             topologyKey: failure-domain.beta.kubernetes.io/zone
   # -- Node selector for ingester pods
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.logs-internal: 'true'
   # -- Tolerations for ingester pods
   tolerations: []
   persistence:
@@ -451,7 +452,8 @@ distributor:
                 app.kubernetes.io/component: distributor
             topologyKey: failure-domain.beta.kubernetes.io/zone
   # -- Node selector for distributor pods
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.logs-internal: 'true'
   # -- Tolerations for distributor pods
   tolerations: []
 
@@ -534,7 +536,8 @@ querier:
                 app.kubernetes.io/component: querier
             topologyKey: failure-domain.beta.kubernetes.io/zone
   # -- Node selector for querier pods
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.logs-internal: 'true'
   # -- Tolerations for querier pods
   tolerations: []
   persistence:
@@ -628,7 +631,8 @@ queryFrontend:
                 app.kubernetes.io/component: query-frontend
             topologyKey: failure-domain.beta.kubernetes.io/zone
   # -- Node selector for query-frontend pods
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.logs-internal: 'true'
   # -- Tolerations for query-frontend pods
   tolerations: []
 
@@ -700,7 +704,8 @@ tableManager:
                 app.kubernetes.io/component: table-manager
             topologyKey: failure-domain.beta.kubernetes.io/zone
   # -- Node selector for table-manager pods
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.logs-internal: 'true'
   # -- Tolerations for table-manager pods
   tolerations: []
 
@@ -768,7 +773,8 @@ compactor:
   # -- Grace period to allow the compactor to shutdown before it is killed
   terminationGracePeriodSeconds: 30
   # -- Node selector for compactor pods
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.logs-internal: 'true'
   # -- Tolerations for compactor pods
   tolerations: []
   affinity:
@@ -885,7 +891,8 @@ ruler:
                 app.kubernetes.io/component: ruler
             topologyKey: failure-domain.beta.kubernetes.io/zone
   # -- Node selector for ruler pods
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.logs-internal: 'true'
   # -- Tolerations for ruler pods
   tolerations: []
   persistence:
@@ -1036,7 +1043,8 @@ indexGateway:
                 app.kubernetes.io/component: index-gateway
             topologyKey: failure-domain.beta.kubernetes.io/zone
   # -- Node selector for index-gateway pods
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.logs-internal: 'true'
   # -- Tolerations for index-gateway pods
   tolerations: []
   persistence:
