--- a/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/values.yaml
@@ -423,6 +423,10 @@ tolerations:
   - key: node-role.kubernetes.io/master
     operator: Exists
     effect: NoSchedule
+  - key: node-role.kubernetes.io/control-plane
+    operator: Exists
+    effect: NoSchedule
+
 
 controllerID:
   # Specifies whether a controller ID should be defined for the operator
