--- a/Tools/neon-cli/neon-cli.csproj
+++ b/Tools/neon-cli/neon-cli.csproj
@@ -123,7 +123,7 @@
 	  </EmbeddedResource>
 	</ItemGroup>
 
-	<Target Name="PubCore" AfterTargets="AfterBuild">
+	<Target Name="PubCore" AfterTargets="AfterBuild" Condition="False">
 		<Message Importance="high" Text="Publish: $(ProjectPath)" />
 		<Exec Command="pubcore --no-cmd &quot;$(ProjectPath)&quot; &quot;$(TargetName)&quot; $(ConfigurationName) &quot;$(OutDir.TrimEnd('\'))&quot; &quot;$(NF_BUILD)&quot; win10-x64" />
 	</Target>
