--- a/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/deployment.yaml
@@ -77,6 +77,14 @@ spec:
       securityContext:
         runAsUser: 65532
       terminationGracePeriodSeconds: 10
+      nodeSelector:
+        neonkube.io/neon-system.registry: 'true'
+      {{- if .Values.tolerations }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- end }}
       volumes:
       - name: cert
         secret:
