reload Loki when config changes

--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/configmap.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/configmap.yaml
@@ -5,6 +5,8 @@ metadata:
   name: {{ include "loki.fullname" . }}
   labels:
     {{- include "loki.labels" . | nindent 4 }}
+  annotations:
+    reloader.stakater.com/match: 'true'
 data:
   config.yaml: |
     {{- tpl (mergeOverwrite (tpl .Values.loki.config . | fromYaml) .Values.loki.structuredConfig | toYaml) . | nindent 4 }}
