--- a/Lib/Neon.Kube.Setup/Resources/Helm/mimir/templates/secret.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/mimir/templates/secret.yaml
@@ -9,6 +9,8 @@ metadata:
     chart: {{ template "mimir.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+  annotations:
+    reloader.stakater.com/match: 'true'
 data:
   mimir.yaml: {{ include "mimir.calculatedConfig" . | b64enc }}
 {{- end }}
