--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/values.yaml
@@ -92,7 +92,7 @@ tenants:
         ## storageClass specifies the storage class name to be used for this pool
         storageClassName: neon-internal-minio
         ## Used to specify a toleration for a pod
-        tolerations: {}
+        tolerations: []
         ## nodeSelector parameters for MinIO Pods. It specifies a map of key-value pairs. For the pod to be
         ## eligible to run on a node, the node must have each of the
         ## indicated key-value pairs as labels.
