--- a/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/neon-system-db.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/neon-system-db.yaml
@@ -140,6 +140,9 @@ spec:
 
   initContainers: []
   sidecars:
+  - name: health-check
+    image: "{{ .Values.healthCheck.image.organization }}/{{ .Values.healthCheck.image.repository }}:{{ .Values.healthCheck.image.tag }}"
+    imagePullPolicy: "{{ .Values.imagePullPolicy }}"
   - name: metrics
     image: "{{ .Values.metrics.image.organization }}/{{ .Values.metrics.image.repository }}:{{ .Values.metrics.image.tag }}"
     imagePullPolicy: "{{ .Values.imagePullPolicy }}"
