reload tempo on config change

--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/configmap-tempo.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/configmap-tempo.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "tempo.distributorLabels" . | nindent 4 }}
+  annotations:
+    reloader.stakater.com/match: 'true'
 data:
   tempo-query.yaml: |
     {{- tpl .Values.queryFrontend.query.config . | nindent 4 }}
