--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -123,6 +123,8 @@
 		<None Remove="Resources\Helm\neon-node-agent\templates\serviceaccount.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\values.yaml" />
 		<None Remove="Resources\Helm\postgres-operator\templates\configmap-metric-exporter.yaml" />
+		<None Remove="Resources\Helm\postgres-operator\templates\healthcheck-role.yaml" />
+		<None Remove="Resources\Helm\postgres-operator\templates\healthcheck-rolebinding.yaml" />
 		<None Remove="Resources\Helm\postgres-operator\templates\neon-system-db.yaml" />
 		<None Remove="Resources\Helm\postgres-operator\templates\servicemonitor.yaml" />
 		<None Remove="Resources\Helm\redis-ha\templates\grafana-dashboard.yaml" />
