--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/values.yaml
@@ -110,6 +110,11 @@ tenants:
                     matchLabels:
                       v1.min.io/tenant: minio
                   topologyKey: kubernetes.io/hostname
+            requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  v1.min.io/tenant: minio
+              topologyKey: kubernetes.io/hostname
         ## Configure resource requests and limits for MinIO containers
         resources:
           requests:
