[nodetask]: in progress

--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/rbac.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/rbac.yaml
@@ -7,11 +7,14 @@ rules:
   - neonkube.io
   resources:
   - containerregistries
+  - nodetasks
+  - nodetasks/status
   verbs:
   - get
   - list
   - watch
   - update
+  - patch
 - apiGroups:
   - ""
   resources:
