--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/rbac.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/rbac.yaml
@@ -8,11 +8,13 @@ rules:
   resources:
   - containerregistries
   - nodetasks
+  - nodetasks/status
   verbs:
   - get
   - list
   - watch
   - update
+  - patch
 - apiGroups:
   - ""
   resources:
