--- a/Lib/Neon.Kube.Operator/Neon.Kube.Operator.csproj
+++ b/Lib/Neon.Kube.Operator/Neon.Kube.Operator.csproj
@@ -48,6 +48,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="JsonPatch.Net" Version="1.1.2" />
 		<PackageReference Include="KubeOps" Version="6.5.0" />
 		<PackageReference Include="prometheus-net" Version="6.0.0" />
 	</ItemGroup>
