--- a/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
+++ b/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
@@ -58,6 +58,7 @@
 	<ItemGroup>
 		<PackageReference Include="KubernetesClient" Version="7.0.15" />
 		<PackageReference Include="KubeOps" Version="6.5.0" />
+		<PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
