--- a/Lib/Neon.Kube.Resources/Neon.Kube.Resources.csproj
+++ b/Lib/Neon.Kube.Resources/Neon.Kube.Resources.csproj
@@ -39,6 +39,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="KubernetesClient" Version="7.0.15" />
+		<PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
