--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -99,6 +99,7 @@
 		<ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
 		<ProjectReference Include="..\Neon.Cryptography\Neon.Cryptography.csproj" />
 		<ProjectReference Include="..\Neon.Deployment\Neon.Deployment.csproj" />
+		<ProjectReference Include="..\Neon.JsonConverters\Neon.JsonConverters.csproj" />
 		<ProjectReference Include="..\Neon.Kube.Models\Neon.Kube.Models.csproj" />
 		<ProjectReference Include="..\Neon.Kube.Resources\Neon.Kube.Resources.csproj" />
 		<ProjectReference Include="..\Neon.Postgres\Neon.Postgres.csproj" />
