--- a/Lib/Neon.Xunit.Couchbase/Neon.Xunit.Couchbase.csproj
+++ b/Lib/Neon.Xunit.Couchbase/Neon.Xunit.Couchbase.csproj
@@ -6,7 +6,7 @@
 		<Version>10000.0.1650-dev-jeff</Version>
 		<Authors>neonFORGE Team</Authors>
 		<Company>neonFORGE LLC</Company>
-		<Product>neonLIBRARY</Product>
+		<Product>neonSDK</Product>
 		<Description>Xunit test fixture for Couchbase</Description>
 		<PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
 		<AssemblyVersion>0.0.0.0</AssemblyVersion>
