--- a/Lib/Neon.ModelGen/Neon.ModelGen.csproj
+++ b/Lib/Neon.ModelGen/Neon.ModelGen.csproj
@@ -7,7 +7,7 @@
 		<Version>10000.0.1650-dev-jeff</Version>
 		<Authors>neonFORGE Team</Authors>
 		<Company>neonFORGE LLC</Company>
-		<Product>neonLIBRARY</Product>
+		<Product>neonSDK</Product>
 		<Description>
 			JSON data model generator library for C# intended for people inetgrating this functionality into stand-alone solutiuons.
 
