--- a/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
+++ b/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
@@ -12,7 +12,7 @@
 		<Copyright>Copyright © 2005-2022 by neonFORGE LLC.  All rights reserved.</Copyright>
 		<AssemblyVersion>0.0.0.0</AssemblyVersion>
 		<FileVersion>0.0.0.0</FileVersion>
-		<Product>neonLIBRARY</Product>
+		<Product>neonSDK</Product>
 		<LangVersion>latest</LangVersion>
 		<IsPackable>true</IsPackable>
 		<PackageLicenseUrl></PackageLicenseUrl>
