--- a/Lib/Neon.Kube.Resources/Neon.Kube.Resources.csproj
+++ b/Lib/Neon.Kube.Resources/Neon.Kube.Resources.csproj
@@ -51,4 +51,8 @@
 		<Content Include="bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).pdb" PackagePath="contentFiles\any\$(TargetFramework)\$(AssemblyName).pdb" PackageCopyToOutput="true" Pack="true" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Neon.JsonConverters\Neon.JsonConverters.csproj" />
+	</ItemGroup>
+
 </Project>
